--- a/Config
+++ b/Config
@@ -9,3 +9,4 @@ DEFAULT CoolMain
 
 D useCool        shall I cool?  
 PARAMETER useCool       BOOLEAN FALSE  #placed here so that if any other unit wants to switch some code based upon this unit, it can do so.
+PARAMETER coolDtFactor  REAL    1.0
